--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "firebase": "^9.12.0",
+    "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   },
