--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
-    "firebase": "^9.5.0",
+    "firebase": "9.4.0",
     "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "react": "18.2.0",
