--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
-    "firebase": "9.4.0",
+    "firebase": "^9.12.0",
     "framer-motion": "^7.6.2",
-    "next": "12.3.1",
+    "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
