--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.0",
     "framer-motion": "^7.6.2",
