--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.10",
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.0",
     "framer-motion": "^7.6.2",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
